--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,14 @@
 [db]
-host = 
-port = 
-user = 
-passwd = 
+host = localhost
+port = 3306
+user = root
+passwd = root
 db = ZHIHUHOT_FULL_DATA
 charset = utf8
 use_unicode = True
 
 [cookie]
-cookie = 
+cookie =
 
 [question_thread_amount]
 question_thread_amount = 2
